--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,72 @@
   font-style: normal;
 }
 
+body {
+  position: relative;
+  overflow-x: hidden;
+}
+
+.index0 {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+}
+
+.index1 {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  padding: 0 90px;
+}
+
+.blck1 {
+  background-image: url('../img/blck1.png');
+  width: 2470px;
+  height: 1470px;
+  background-position: -369px -209px;
+  background-repeat: no-repeat;
+}
+
+.blck2 {
+  background-image: url('../img/blck2.png');
+  width: 1822px;
+  height: 900px;
+  background-position: -369px 209px;
+  background-repeat: no-repeat;
+}
+
+.blck3 {
+  background-image: url('../img/blck2.png');
+  width: 1822px;
+  height: 900px;
+  transform: scale(1, -1);
+  background-position: -369px 409px;
+  background-repeat: no-repeat;
+}
+
+.blck4 {
+  background-image: url('../img/blck1.png');
+  width: 2470px;
+  height: 1470px;
+  transform: scale(-1, 1);
+  transform: rotate(180deg);
+  background-position: -369px 609px;
+  background-repeat: no-repeat;
+}
+
+.blck5 {
+  background-image: url('../img/blck2.png');
+  width: 1822px;
+  height: 900px;
+  transform: scale(-1, -1);
+  background-position: -369px 809px;
+  background-repeat: no-repeat;
+}
+
+/* ================================================ */
+
 .fc-white {
   color: #FFFFFF;
 }
@@ -37,42 +103,154 @@
   font-family: MonB;
 }
 
-.fs-20 {
+/* ================================================ */
+
+.block1 { 
+  padding-right: 0px;
+}
+
+.block2 {
+  margin-top: 20px;
+}
+
+.block3 {
+  margin-top: 360px;
+}
+
+.block4 {
+  margin-top: 130px;
+}
+
+.block5 {
+  margin-top: 330px;
+}
+
+/* ================================================ */
+
+.button {
+  display: flex;
+  border-radius: 60px;
+  background: #FFC107;
+  max-width: 340px;
+  margin-top: 48px;
+}
+
+.btn-send {
+  background: #2352FF;
+  width: 100%;
+}
+
+.txt-btn {
+  color: #fff;
+  display: block;
+  margin: auto;
   font-size: 20px;
   line-height: 60px;
+  font-family: MonB;
 }
 
-.fs-22 {
-  font-size: 22px;
-  line-height: 40px;
+/* ================================================ */
+
+.header {
+  margin: 44px 86px 0 auto;
+  padding: 26px 0;
 }
 
-.fs-24 {
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 970px;
+}
+
+.navbar li {
+  display: inline-block;
+}
+
+.navbar-item {
   font-size: 24px;
   line-height: 40px;
+  color: #2352FF;
+  position: relative;
 }
 
-.fs-30 {
-  font-size: 30px;
-  line-height: 60px;
+.navbar-item:hover {
+  color: #2352FF;
+  text-decoration: none;
 }
 
-.fs-36 {
-  font-size: 36px;
-  line-height: 60px;
+.navbar li:hover .navbar-item:after {
+  position: absolute;
+  content: '';
+  top: 32px;
+  left: 0;
+  width: 100%;
+  background: #FFC107;
+  height: 4px;
 }
 
-.fs-64 {
+/* ================================================ */
+
+.img {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.smart-logo {
+  background-image: url('../img/smart-logo.svg');
+  width: 130px;
+  height: 124px;
+}
+
+.blockTop-h1 {
+  font-size: 86px;
+  line-height: 90px;
+  font-family: MonB;
+  margin-top: 80px;
+}
+
+.blockTop-p {
+  font-size: 28px;
+  line-height: 50px;
+  margin-top: 40px;
+}
+
+.peoples-n-city {
+  background-image: url('../img/peoples-n-city.svg');
+  width: 100%;
+  height: 1060px;
+}
+
+/* ================================================ */
+
+.mob-block-2 {
+  background-image: url('../img/mob-block-2.svg');
+  width: 770px;
+  height: 740px;
+}
+
+.blockMjr-h2 {
   font-size: 64px;
-  line-height: 70px;
+  line-height: 60px;
+  font-family: MonB;
+  margin-top: 220px;
 }
 
-.fs-80 {
-  font-size: 80px;
-  line-height: 110px;
+.blockMjr-p {
+  font-size: 22px;
+  line-height: 40px;
+  margin-top: 40px;
 }
 
-.fs-96 {
-  font-size: 96px;
-  line-height: 110px;
+.mob-block-3 {
+  background-image: url('../img/mob-block-3.svg');
+  width: 770px;
+  height: 740px;
+}
+
+.peoples-n-path {
+  background-image: url('../img/peoples-n-path.svg');
+  width: 770px;
+  height: 740px;
 }
