--- a/styles/reset.css
+++ b/styles/reset.css
@@ -44,6 +44,15 @@ a {
 	text-decoration: none;
 }
 
+a:hover {
+	text-decoration: none;
+}
+
+button {
+	border: none;
+	outline: none;
+}
+
 * {
 	box-sizing: border-box;
 }
