--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,7 @@
 body {
   position: relative;
   overflow-x: hidden;
+  background-color: burlywood;
 }
 
 .index0 {
@@ -33,19 +34,24 @@ body {
   left: 0;
 }
 
-.index1 {
+.index999 {
   position: absolute;
-  z-index: 1;
+  z-index: 999;
   top: 0;
   left: 0;
-  padding: 0 90px;
+  padding: 42px 90px 140px;
 }
 
-.blck1 {
+.index0 div {
+  position: absolute;
+}
+
+/* .blck1 {
   background-image: url('../img/blck1.png');
   width: 2470px;
   height: 1470px;
-  background-position: -369px -209px;
+  top: 0;
+  left: 0;
   background-repeat: no-repeat;
 }
 
@@ -53,7 +59,8 @@ body {
   background-image: url('../img/blck2.png');
   width: 1822px;
   height: 900px;
-  background-position: -369px 209px;
+  top: 1110;
+  left: 0;
   background-repeat: no-repeat;
 }
 
@@ -62,7 +69,8 @@ body {
   width: 1822px;
   height: 900px;
   transform: scale(1, -1);
-  background-position: -369px 409px;
+  top: 12900;
+  left: 0;
   background-repeat: no-repeat;
 }
 
@@ -72,7 +80,8 @@ body {
   height: 1470px;
   transform: scale(-1, 1);
   transform: rotate(180deg);
-  background-position: -369px 609px;
+  top: 15000;
+  left: 0;
   background-repeat: no-repeat;
 }
 
@@ -81,9 +90,10 @@ body {
   width: 1822px;
   height: 900px;
   transform: scale(-1, -1);
-  background-position: -369px 809px;
+  top: 22200;
+  left: 0;
   background-repeat: no-repeat;
-}
+} */
 
 /* ================================================ */
 
@@ -110,7 +120,7 @@ body {
 }
 
 .block2 {
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .block3 {
@@ -135,6 +145,10 @@ body {
   margin-top: 48px;
 }
 
+.button:hover {
+  background: #FFDD77;
+}
+
 .btn-send {
   background: #2352FF;
   width: 100%;
@@ -152,7 +166,7 @@ body {
 /* ================================================ */
 
 .header {
-  margin: 44px 86px 0 auto;
+  margin: 0 86px 0 auto;
   padding: 26px 0;
 }
 
@@ -253,4 +267,137 @@ body {
   background-image: url('../img/peoples-n-path.svg');
   width: 770px;
   height: 740px;
+}
+
+/* ================================================ */
+
+.conts-adrs {
+  display: flex;
+  width: 474px;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 72px;
+}
+
+.conts-city {
+  font-size: 24px;
+  font-family: MonB;
+  line-height: 40px;
+  position: relative;
+  color: #2352FF;
+}
+
+.curr-sity:after {
+  position: absolute;
+  content: '';
+  top: 36px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: #FFC107;
+}
+
+.altarx-logo {
+  background-image: url('../img/altarx-logo.svg');
+  margin-top: 48px;
+  width: 210px;
+  height: 24px;
+}
+
+.contacts {
+  display: none;
+  height: 360px;
+  
+}
+
+.curr-conts {
+  display: block;
+}
+
+.conts-txt {
+  font-size: 22px;
+  line-height: 36px;
+  margin-bottom: 72px;
+}
+
+.conts-txt:last-child {
+  margin-bottom: 0;
+}
+
+/* ================================================ */
+
+.form {
+  width: 540px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.input,
+.textarea {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #B4C4FF;
+  color: #2352FF;
+  font-size: 22px;
+  line-height: 36px;  
+  outline: none;
+  width: 100%;
+}
+
+.input {
+  margin-bottom: 68px;
+}
+
+.textarea {
+  font-family: MonR;
+  resize: none;
+}
+
+.input::-webkit-input-placeholder {
+  color: #2352FF;
+}
+
+.input:-moz-placeholder {
+  color: #2352FF;
+}
+
+.input:-ms-input-placeholder {
+  color: #2352FF;
+}
+
+.textarea::-webkit-input-placeholder {
+  font-size: 22px;
+  line-height: 36px;
+  font-family: MonR;
+  color: #2352FF;
+}
+
+.textarea:-moz-placeholder {
+  font-size: 22px;
+  line-height: 36px;
+  font-family: MonR;
+  color: #2352FF;
+}
+
+.textarea:-ms-input-placeholder {
+  font-size: 22px;
+  line-height: 36px;
+  font-family: MonR;
+  color: #2352FF;
+}
+
+.submit {
+  width: 100%;
+  height: 80px;
+  background: #2352FF;
+  border-radius: 60px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 60px;
+  color: #FFFFFF;
+  border: none;
+  margin-top: 80px;
+  outline: none;
+  box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.75);
 }
