--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,6 @@
 body {
   position: relative;
   overflow-x: hidden;
-  /* background-color: burlywood; */
 }
 
 .index0 {
@@ -60,30 +59,33 @@ body {
   background-image: url('../img/blck2.png');
   width: 1822px;
   height: 900px;
-  top: 1110;
-  left: 0;
+  top: 1240px;
+  left: -540px;
   background-repeat: no-repeat;
+  transform: rotate(4deg);
+  background-size: 85%;
 }
-/*
+
 .blck3 {
   background-image: url('../img/blck2.png');
   width: 1822px;
   height: 900px;
   transform: scale(1, -1);
-  top: 12900;
-  left: 0;
+  top: 2250px;
+  left: 460px;
   background-repeat: no-repeat;
+  background-size: 95%;
 }
 
 .blck4 {
   background-image: url('../img/blck1.png');
   width: 2470px;
   height: 1470px;
-  transform: scale(-1, 1);
   transform: rotate(180deg);
-  top: 15000;
-  left: 0;
+  top: 2910px;
+  left: -140px;
   background-repeat: no-repeat;
+  background-size: 80%;
 }
 
 .blck5 {
@@ -91,10 +93,10 @@ body {
   width: 1822px;
   height: 900px;
   transform: scale(-1, -1);
-  top: 22200;
-  left: 0;
+  top: 4105px;
+  left: -920px;
   background-repeat: no-repeat;
-} */
+}
 
 /* ================================================ */
 
@@ -233,7 +235,7 @@ body {
 }
 
 .peoples-n-city {
-  background-image: url('../img/peoples-n-city.svg');
+  background-image: url('../img/peoples-n-city.png');
   width: 100%;
   height: 1060px;
 }
@@ -244,6 +246,11 @@ body {
   background-image: url('../img/mob-block-2.svg');
   width: 770px;
   height: 740px;
+}
+
+.block-contain {
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .blockMjr-h2 {
