--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,67 @@
 }
 
 body {
-  background-color: darkkhaki;
+  position: relative;
+}
+
+.bckg-img {
+  position: relative;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+.block1 {
+  background-image: url('../img/blck1.png');  
+  height: 1180px;  
+  background-position: -620px -310px; 
+}
+
+.peoples-n-city {
+  background-image: url('../img/peoples-n-city.png');
+  width: 100%;
+  height: 1060px;
+  background-position: 1000px 150px;
+  background-repeat: no-repeat;
+}
+
+.block2 {
+  background-image: url('../img/blck2.png');  
+  height: 900px;
+  background-position: -210% 0%;
+  background-size: 85%;
+}
+
+.block3 {
+  background-image: url('../img/blck3.png');  
+  height: 900px;
+  background-size: 95%;
+}
+
+.peoples-n-path {
+  background-image: url('../img/peoples-n-path.svg');
+  width: 100%;
+  height: 100%;
+  background-position: 0px -30px;
+  background-size: 75%;
+  background-repeat: no-repeat;
+}
+
+.block4 {
+  background-image: url('../img/blck4.png');
+  height: 1880px;
+  background-size: 100%;
+  background-position: 190px 0px;
+  top: 100px;
+}
+
+.mt-blck5 {
+  margin-top: 650px;
+}
+
+.block5 {
+  background-image: url('../img/blck5.png');
+  height: 100%;
+  background-position: -800px 930px;
 }
 
 /* ================================================ */
@@ -41,24 +101,6 @@ body {
 
 .fw-b {
   font-family: MonB;
-}
-
-/* ================================================ */
-
-.mt-bl2 {
-  margin-top: 50px;
-}
-
-.mt-bl3 {
-  margin-top: 360px;
-}
-
-.mt-bl4 {
-  margin-top: 130px;
-}
-
-.mt-bl5 {
-  margin-top: 330px;
 }
 
 /* ================================================ */
@@ -160,11 +202,7 @@ body {
   margin-top: 40px;
 }
 
-.peoples-n-city {
-  background-image: url('../img/peoples-n-city.png');
-  width: 100%;
-  height: 1060px;
-}
+
 
 /* ================================================ */
 
@@ -200,11 +238,7 @@ body {
   margin: 0 auto;
 }
 
-.peoples-n-path {
-  background-image: url('../img/peoples-n-path.svg');
-  width: 770px;
-  height: 740px;
-}
+
 
 /* ================================================ */
 
@@ -268,7 +302,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding-bottom: 120px;
+  padding-bottom: 110px;
 }
 
 .input,
